<resources>
    <string name="app_name">Njangi</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_shopping_cart">Cart</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>
    <string name="title_order">Order</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_login">Login</string>
    <string name="title_category">Category</string>
    <string name="title_create_user">Create User</string>
    <string name="title_manage_product">Manage Product</string>
    <string name="order">Orders</string>
    <string name="category">Category</string>
    <string name="back">Back</string>
    <string name="pay">Pay</string>
    <string name="invoice">Invoice</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="customer_support">CUSTOMER SUPPORT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">No account? Sign Up</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="tel">Telephone</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="usertype">UserType</string>
    <string name="version_number">Version: </string>
    <string name="user">User</string>
    <string name="Buyer">Buyer</string>
    <string name="Seller">Seller</string>
    <string name="price">Price</string>
    <string name="shoes">Shoes</string>
    <string name="description">Description</string>
    <string name="product_image">Product Image</string>
    <string name="electronics">Electronics</string>
    <string name="accessories">Accessories</string>
    <string name="babyandtoys">Baby and Toys</string>
    <string name="cars">Cars</string>
    <string name="hairs">Hairs</string>
    <string name="motorbike">Motorbike</string>
    <string name="clothing">Clothing</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="computer">Computers</string>
    <string name="home_appliance">Home Appliances</string>
    <string name="phones">Phones</string>
    <string name="books">Books</string>
    <string name="games">Games</string>
    <string name="search_hint">Search in Njangi</string>
    <string name="menu_search">Lets help you search..</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_details">Product Details</string>
    <string name="rating">Rating</string>
    <string name="title_product_listing">Product Listing</string>
    <string name="title_product_detail">Product Details</string>
    <string name="product_owner">Seller Info</string>
    <string name="overview">Overview</string>
    <string name="chat_whatsapp">Chat: WhatsApp</string>
    <string name="email_njangi_support_com">Email: your@company.com</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="firstname">Firstname</string>
    <string name="registered_since">Registered Since</string>
    <string name="title_profile">Profile</string>
    <string name="feeling_lucky">Feel Lucky</string>
    <string name="black_friday">Black-Friday</string>
    <string name="discounts">Discounts</string>
    <string name="hot_deals">Hot-Deals</string>
    <string name="njangi_deals">Njangi-Deals</string>
    <string name="welcome_back">"Welcome back "</string>
    <string name="add_payment">Add Payment</string>
    <string name="one_step_away">You are one step away</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="total">Total</string>
    <string name="registration">Registration</string>
    <string name="title_bank">Bank</string>
    <string name="not_signed_in">You are not signed in</string>
    <string name="welcome">Welcome</string>
    <string name="photos">Photos</string>
    <string name="image">Image</string>
    <string name="upload">Upload</string>
    <string name="boutique">Boutique</string>
    <string name="title_image">Image</string>
    <string name="title_stock">Stock</string>
    <string name="title_reset">Reset</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_text">Please provide your Njangi Email id \n for password reset instructions.</string>
    <string name="delete_account">Delete Account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Are you sure?</string>
    <string name="update_product">Update</string>
    <string name="delete_product">Delete</string>
    <string name="recent">Recent</string>
    <string name="trending">Trending</string>
    <string name="stocks">Boutique</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="title_message">Message</string>
    <string name="message">Messages</string>
    <string name="title_chat_users">Chat Users</string>
</resources>