<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context="com.njangi.shop.ui.login.LoginFragment"
        android:id="@+id/linearLayout2">

        <LinearLayout
                android:id="@+id/checkout_Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txt_signUp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp">

                <TextView
                        android:id="@+id/app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#000"
                        android:textSize="50sp"
                        android:layout_marginBottom="50dp"/>

                <EditText
                        android:id="@+id/txt_email"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/username"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:background="@drawable/normal_text_background"
                        android:textSize="15sp"
                        android:inputType="textEmailAddress"
                        android:autofillHints="username"/>

                <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:background="@drawable/normal_text_background"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:autofillHints="password"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginBottom="5dp">

                        <Button
                                android:id="@+id/btn_login"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginStart="40dp"
                                android:layout_marginEnd="40dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/login"/>

        </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/txt_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="#000"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:minHeight="30dp"
                app:layout_constraintStart_toStartOf="@+id/checkout_Layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkout_Layout"
                app:layout_constraintEnd_toEndOf="@+id/checkout_Layout"/>

        <TextView
                android:id="@+id/txt_forget"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="#000"
                android:textSize="15sp"
                android:minHeight="30dp"
                app:layout_constraintStart_toStartOf="@+id/checkout_Layout"
                app:layout_constraintTop_toBottomOf="@+id/txt_signUp"
                app:layout_constraintEnd_toEndOf="@+id/checkout_Layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>