<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
                android:id="@+id/txt_Name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_background_blue"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/txt_Surname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/surname"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background_blue"
                android:textSize="15sp" />

        <LinearLayout
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/checkBox_Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/male"
                    android:checked="false"/>

            <CheckBox
                    android:id="@+id/checkBox_Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/female"
                    android:checked="false"/>

        </LinearLayout>

        <EditText
                android:id="@+id/txt_Address"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:inputType="textImeMultiLine|textMultiLine"
                android:hint="@string/address"
                android:gravity="top|left"
                android:background="@drawable/btn_background_blue"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Country   "/>

            <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"/>

            <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User         "/>

            <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

        </LinearLayout>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background_blue"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/txt_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background_blue"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/txt_Retype_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/re_type_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background_blue"
                android:textSize="15sp" />

        <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background_blue"
                android:layout_marginTop="20dp"
                android:text="@string/save"/>

    </LinearLayout>

</RelativeLayout>

