<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.detail.DetailFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:transitionName="photoToAnimate"
                    tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                    android:id="@+id/product_Detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="#000000"
                    android:layout_weight="0.5"
                    android:text="@string/product_details"
                    android:textSize="24sp"/>

            <ImageView
                    android:id="@+id/fav_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0.5"/>

            <TextView
                    android:id="@+id/productOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:text="John Doe" />

            <TextView
                    android:id="@+id/priceOfProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:textSize="24sp"
                    tools:text="2500 + CFA" />

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/title"
                    android:textSize="20sp"/>

            <RelativeLayout
                    android:id="@+id/rating_Layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp">

                <TextView
                        android:id="@+id/txt_Rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="18sp"
                        android:autofillHints="Currency"/>

                <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_Rating"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:backgroundTint="@color/black"
                        android:progressTint="@color/royal_orange"
                        android:numStars="5"/>

            </RelativeLayout>

            <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

    <Button
            android:id="@+id/addToCartButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/add_to_cart"
            android:textColor="#FFF"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_centerInParent="true"/>

</RelativeLayout>